force-app/main/default/objects/Exception_Item__c/Exception_Item__c.object-meta.xml
<CustomObject>
    <label>Exception Item</label>
    <nameField>
        <displayFormat>EX-{000000}</displayFormat>
        <label>Exception Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exception Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>