force-app/main/default/objects/Exception_Item__c/fields/Catalog_Import__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Import__c</fullName>
    <label>Catalog Import</label>
    <referenceTo>Catalog_Import__c</referenceTo>
    <relationshipLabel>Exception Items</relationshipLabel>
    <relationshipName>Exception_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>