force-app/main/default/objects/Exception_Item__c/fields/CSO_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>CSO_Short_Name__c</fullName>
    <label>CSO Short Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>