force-app/main/default/objects/Exception_Item__c/fields/Exception_Basis_For_Request__c.field-meta.xml
<CustomField>
    <fullName>Exception_Basis_For_Request__c</fullName>
    <label>Exception Basis For Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>