force-app/main/default/objects/Exception_Item__c/fields/Exception_PWS_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Exception_PWS_Requirement__c</fullName>
    <label>Exception PWS Requirement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>