force-app/main/default/objects/Exception_Item__c/fields/Exception_Requested_Duration__c.field-meta.xml
<CustomField>
    <fullName>Exception_Requested_Duration__c</fullName>
    <label>Exception Requested Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>