force-app/main/default/objects/Exception_Item__c/fields/Exception_Security__c.field-meta.xml
<CustomField>
    <fullName>Exception_Security__c</fullName>
    <label>Exception Security</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>