force-app/main/default/objects/Exception_Item__c/fields/Exception_Suggested_Plan__c.field-meta.xml
<CustomField>
    <fullName>Exception_Suggested_Plan__c</fullName>
    <label>Exception Suggested Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>