force-app/main/default/objects/Exception_Item__c/fields/Exception_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Exception_Unique_Id__c</fullName>
    <label>Exception Unique Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>